--- a/main/Makefile.in
+++ b/main/Makefile.in
@@ -86,7 +86,7 @@ POST_INSTALL = :
 NORMAL_UNINSTALL = :
 PRE_UNINSTALL = :
 POST_UNINSTALL = :
-bin_PROGRAMS = test$(EXEEXT) test_ET$(EXEEXT)
+bin_PROGRAMS = test$(EXEEXT) test_ET$(EXEEXT) simfit_example$(EXEEXT)
 subdir = main
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
 am__aclocal_m4_deps = $(top_srcdir)/configure.ac
@@ -99,6 +99,10 @@ CONFIG_CLEAN_FILES =
 CONFIG_CLEAN_VPATH_FILES =
 am__installdirs = "$(DESTDIR)$(bindir)"
 PROGRAMS = $(bin_PROGRAMS)
+am_simfit_example_OBJECTS = simfit_example.$(OBJEXT)
+simfit_example_OBJECTS = $(am_simfit_example_OBJECTS)
+simfit_example_LDADD = $(LDADD)
+simfit_example_DEPENDENCIES = ../src/libcpsfit.a
 am_test_OBJECTS = test.$(OBJEXT)
 test_OBJECTS = $(am_test_OBJECTS)
 test_LDADD = $(LDADD)
@@ -136,8 +140,9 @@ AM_V_CXXLD = $(am__v_CXXLD_@AM_V@)
 am__v_CXXLD_ = $(am__v_CXXLD_@AM_DEFAULT_V@)
 am__v_CXXLD_0 = @echo "  CXXLD   " $@;
 am__v_CXXLD_1 = 
-SOURCES = $(test_SOURCES) $(test_ET_SOURCES)
-DIST_SOURCES = $(test_SOURCES) $(test_ET_SOURCES)
+SOURCES = $(simfit_example_SOURCES) $(test_SOURCES) $(test_ET_SOURCES)
+DIST_SOURCES = $(simfit_example_SOURCES) $(test_SOURCES) \
+	$(test_ET_SOURCES)
 am__can_run_installinfo = \
   case $$AM_UPDATE_INFO_DIR in \
     n|no|NO) false;; \
@@ -264,6 +269,7 @@ top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 test_SOURCES = test.C
 test_ET_SOURCES = test_ET.C
+simfit_example_SOURCES = simfit_example.C
 AM_CPPFLAGS = -I$(srcdir)/../include -fopenmp -g --std=c++14 @PYTHON_CFLAGS@
 AM_LDFLAGS = -fopenmp -g 
 LDADD = ../src/libcpsfit.a -lgsl -lgslcblas -lboost_serialization -lboost_python-py27 @PYTHON_LIBS@
@@ -343,6 +349,10 @@ uninstall-binPROGRAMS:
 clean-binPROGRAMS:
 	-test -z "$(bin_PROGRAMS)" || rm -f $(bin_PROGRAMS)
 
+simfit_example$(EXEEXT): $(simfit_example_OBJECTS) $(simfit_example_DEPENDENCIES) $(EXTRA_simfit_example_DEPENDENCIES) 
+	@rm -f simfit_example$(EXEEXT)
+	$(AM_V_CXXLD)$(CXXLINK) $(simfit_example_OBJECTS) $(simfit_example_LDADD) $(LIBS)
+
 test$(EXEEXT): $(test_OBJECTS) $(test_DEPENDENCIES) $(EXTRA_test_DEPENDENCIES) 
 	@rm -f test$(EXEEXT)
 	$(AM_V_CXXLD)$(CXXLINK) $(test_OBJECTS) $(test_LDADD) $(LIBS)
@@ -357,6 +367,7 @@ mostlyclean-compile:
 distclean-compile:
 	-rm -f *.tab.c
 
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/simfit_example.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/test.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/test_ET.Po@am__quote@
 
