Added superjackknife and full ET Fixed bug in generic ET

--- a/main/Makefile.am
+++ b/main/Makefile.am
@@ -1,7 +1,8 @@
-bin_PROGRAMS = test test_ET simfit_example
+bin_PROGRAMS = test test_ET simfit_example superjack_example
 test_SOURCES = test.C
 test_ET_SOURCES = test_ET.C
 simfit_example_SOURCES = simfit_example.C
+superjack_example_SOURCES = superjack_example.C
 
 AM_CPPFLAGS = -I$(srcdir)/../include -fopenmp -g --std=c++14 @PYTHON_CFLAGS@
 
