--- a/main/Makefile.am
+++ b/main/Makefile.am
@@ -1,8 +1,9 @@
-bin_PROGRAMS = test test_ET simfit_example superjack_example
+bin_PROGRAMS = test test_ET simfit_example superjack_example fit_mpi_gparity_AMA
 test_SOURCES = test.C
 test_ET_SOURCES = test_ET.C
 simfit_example_SOURCES = simfit_example.C
 superjack_example_SOURCES = superjack_example.C
+fit_mpi_gparity_AMA_SOURCES = fit_mpi_gparity_AMA.C
 
 AM_CPPFLAGS = -I$(srcdir)/../include -fopenmp -g --std=c++14 @PYTHON_CFLAGS@
 
