--- a/main/Makefile.in
+++ b/main/Makefile.in
@@ -87,7 +87,7 @@ NORMAL_UNINSTALL = :
 PRE_UNINSTALL = :
 POST_UNINSTALL = :
 bin_PROGRAMS = test$(EXEEXT) test_ET$(EXEEXT) simfit_example$(EXEEXT) \
-	superjack_example$(EXEEXT)
+	superjack_example$(EXEEXT) fit_mpi_gparity_AMA$(EXEEXT)
 subdir = main
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
 am__aclocal_m4_deps = $(top_srcdir)/configure.ac
@@ -100,6 +100,10 @@ CONFIG_CLEAN_FILES =
 CONFIG_CLEAN_VPATH_FILES =
 am__installdirs = "$(DESTDIR)$(bindir)"
 PROGRAMS = $(bin_PROGRAMS)
+am_fit_mpi_gparity_AMA_OBJECTS = fit_mpi_gparity_AMA.$(OBJEXT)
+fit_mpi_gparity_AMA_OBJECTS = $(am_fit_mpi_gparity_AMA_OBJECTS)
+fit_mpi_gparity_AMA_LDADD = $(LDADD)
+fit_mpi_gparity_AMA_DEPENDENCIES = ../src/libcpsfit.a
 am_simfit_example_OBJECTS = simfit_example.$(OBJEXT)
 simfit_example_OBJECTS = $(am_simfit_example_OBJECTS)
 simfit_example_LDADD = $(LDADD)
@@ -145,9 +149,11 @@ AM_V_CXXLD = $(am__v_CXXLD_@AM_V@)
 am__v_CXXLD_ = $(am__v_CXXLD_@AM_DEFAULT_V@)
 am__v_CXXLD_0 = @echo "  CXXLD   " $@;
 am__v_CXXLD_1 = 
-SOURCES = $(simfit_example_SOURCES) $(superjack_example_SOURCES) \
-	$(test_SOURCES) $(test_ET_SOURCES)
-DIST_SOURCES = $(simfit_example_SOURCES) $(superjack_example_SOURCES) \
+SOURCES = $(fit_mpi_gparity_AMA_SOURCES) $(simfit_example_SOURCES) \
+	$(superjack_example_SOURCES) $(test_SOURCES) \
+	$(test_ET_SOURCES)
+DIST_SOURCES = $(fit_mpi_gparity_AMA_SOURCES) \
+	$(simfit_example_SOURCES) $(superjack_example_SOURCES) \
 	$(test_SOURCES) $(test_ET_SOURCES)
 am__can_run_installinfo = \
   case $$AM_UPDATE_INFO_DIR in \
@@ -277,6 +283,7 @@ test_SOURCES = test.C
 test_ET_SOURCES = test_ET.C
 simfit_example_SOURCES = simfit_example.C
 superjack_example_SOURCES = superjack_example.C
+fit_mpi_gparity_AMA_SOURCES = fit_mpi_gparity_AMA.C
 AM_CPPFLAGS = -I$(srcdir)/../include -fopenmp -g --std=c++14 @PYTHON_CFLAGS@
 AM_LDFLAGS = -fopenmp -g 
 LDADD = ../src/libcpsfit.a -lgsl -lgslcblas -lboost_serialization -lboost_python-py27 @PYTHON_LIBS@
@@ -356,6 +363,10 @@ uninstall-binPROGRAMS:
 clean-binPROGRAMS:
 	-test -z "$(bin_PROGRAMS)" || rm -f $(bin_PROGRAMS)
 
+fit_mpi_gparity_AMA$(EXEEXT): $(fit_mpi_gparity_AMA_OBJECTS) $(fit_mpi_gparity_AMA_DEPENDENCIES) $(EXTRA_fit_mpi_gparity_AMA_DEPENDENCIES) 
+	@rm -f fit_mpi_gparity_AMA$(EXEEXT)
+	$(AM_V_CXXLD)$(CXXLINK) $(fit_mpi_gparity_AMA_OBJECTS) $(fit_mpi_gparity_AMA_LDADD) $(LIBS)
+
 simfit_example$(EXEEXT): $(simfit_example_OBJECTS) $(simfit_example_DEPENDENCIES) $(EXTRA_simfit_example_DEPENDENCIES) 
 	@rm -f simfit_example$(EXEEXT)
 	$(AM_V_CXXLD)$(CXXLINK) $(simfit_example_OBJECTS) $(simfit_example_LDADD) $(LIBS)
@@ -378,6 +389,7 @@ mostlyclean-compile:
 distclean-compile:
 	-rm -f *.tab.c
 
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/fit_mpi_gparity_AMA.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/simfit_example.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/superjack_example.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/test.Po@am__quote@
