distribution and minimizer summations use a = a+b and not a+=b to facilitate use of ET on compound types Fixed doubleJackknifeDistribution resample when DJ size was set non-zero by constructor distribution move constructors now properly call base move constructor Added include directory in main for main program headers Broke fit_mpi_gparity_AMA into multiple headers and continued work

--- a/main/Makefile.in
+++ b/main/Makefile.in
@@ -284,7 +284,7 @@ test_ET_SOURCES = test_ET.C
 simfit_example_SOURCES = simfit_example.C
 superjack_example_SOURCES = superjack_example.C
 fit_mpi_gparity_AMA_SOURCES = fit_mpi_gparity_AMA.C
-AM_CPPFLAGS = -I$(srcdir)/../include -fopenmp -g --std=c++14 @PYTHON_CFLAGS@
+AM_CPPFLAGS = -I$(srcdir)/../include -I$(srcdir)/include -fopenmp -g --std=c++14 @PYTHON_CFLAGS@
 AM_LDFLAGS = -fopenmp -g 
 LDADD = ../src/libcpsfit.a -lgsl -lgslcblas -lboost_serialization -lboost_python-py27 @PYTHON_LIBS@
 all: all-am
