--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -2,4 +2,4 @@ SUBDIRS =
 lib_LIBRARIES = libcpsfit.a
 libcpsfit_a_SOURCES = 
 
-AM_CPPFLAGS = -I$(srcdir)/../include -g
+AM_CPPFLAGS = -I$(srcdir)/../include
