--- a/main/Makefile.am
+++ b/main/Makefile.am
@@ -1,9 +1,10 @@
-bin_PROGRAMS = test test_ET simfit_example superjack_example fit_mpi_gparity_AMA
+bin_PROGRAMS = test test_ET simfit_example superjack_example fit_mpi_gparity_AMA fit_pipi_gparity
 test_SOURCES = test.C
 test_ET_SOURCES = test_ET.C
 simfit_example_SOURCES = simfit_example.C
 superjack_example_SOURCES = superjack_example.C
 fit_mpi_gparity_AMA_SOURCES = fit_mpi_gparity_AMA.C
+fit_pipi_gparity_SOURCES = fit_pipi_gparity.C
 
 AM_CPPFLAGS = -I$(srcdir)/../include -I$(srcdir)/include
 LDADD =../src/libcpsfit.a
