generic_ET and distributions: 	Added ETE operator= to avoid copy constructor usage random: 	Added some more options for gaussianRandom main: 	Added a benchmark program environment for tuning performance

--- a/main/Makefile.am
+++ b/main/Makefile.am
@@ -1,10 +1,11 @@
-bin_PROGRAMS = test test_ET simfit_example superjack_example fit_mpi_gparity_AMA fit_pipi_gparity
+bin_PROGRAMS = test test_ET simfit_example superjack_example fit_mpi_gparity_AMA fit_pipi_gparity benchmark
 test_SOURCES = test.C
 test_ET_SOURCES = test_ET.C
 simfit_example_SOURCES = simfit_example.C
 superjack_example_SOURCES = superjack_example.C
 fit_mpi_gparity_AMA_SOURCES = fit_mpi_gparity_AMA.C
 fit_pipi_gparity_SOURCES = fit_pipi_gparity.C
+benchmark_SOURCES = benchmark.C
 
 AM_CPPFLAGS = -I$(srcdir)/../include -I$(srcdir)/include
 LDADD =../src/libcpsfit.a
