--- a/config.h.in
+++ b/config.h.in
@@ -12,6 +12,9 @@
 /* Define to 1 if you have the `fesetround' function. */
 #undef HAVE_FESETROUND
 
+/* Use HDF5 */
+#undef HAVE_HDF5
+
 /* Define to 1 if you have the <inttypes.h> header file. */
 #undef HAVE_INTTYPES_H
 
