--- a/main/Makefile.am
+++ b/main/Makefile.am
@@ -1,4 +1,4 @@
-bin_PROGRAMS = fit_example test_ET test_hdf5 simfit_example superjack_example generic_freeze_example fit_mpi_gparity_AMA fit_pipi_gparity benchmark 
+bin_PROGRAMS = fit_example test_ET test_hdf5 simfit_example superjack_example generic_freeze_example fit_mpi_gparity_AMA fit_pipi_gparity fit_ktopipi_gparity benchmark 
 fit_example_SOURCES = fit_example.C
 test_ET_SOURCES = test_ET.C
 simfit_example_SOURCES = simfit_example.C
@@ -6,6 +6,7 @@ superjack_example_SOURCES = superjack_example.C
 generic_freeze_example_SOURCES = generic_freeze_example.C
 fit_mpi_gparity_AMA_SOURCES = fit_mpi_gparity_AMA.C
 fit_pipi_gparity_SOURCES = fit_pipi_gparity.C
+fit_ktopipi_gparity_SOURCES = fit_ktopipi_gparity.C
 benchmark_SOURCES = benchmark.C
 test_hdf5_SOURCES = test_hdf5.C
 
