Moved cosh, sinh fit functions to main library, added exponential fit func Better error handling in HDF5 read Added 2pt effective mass calculation to main library Added calculation of Luscher zeta function to main library Added main program to perform standard 'simple' fits to sinh, cosh, exp...

--- a/main/Makefile.am
+++ b/main/Makefile.am
@@ -1,4 +1,4 @@
-bin_PROGRAMS = fit_example test_ET test_hdf5 test_tensor test_expression_parse simfit_example superjack_example generic_freeze_example fit_mpi_gparity_AMA fit_pipi_gparity fit_ktopipi_gparity benchmark hdf5_print
+bin_PROGRAMS = fit_example test_ET test_hdf5 test_tensor test_expression_parse simfit_example superjack_example generic_freeze_example fit_mpi_gparity_AMA fit_pipi_gparity fit_ktopipi_gparity fit_simple benchmark hdf5_print
 fit_example_SOURCES = fit_example.C
 test_ET_SOURCES = test_ET.C
 test_tensor_SOURCES = test_tensor.C
@@ -8,6 +8,7 @@ generic_freeze_example_SOURCES = generic_freeze_example.C
 fit_mpi_gparity_AMA_SOURCES = fit_mpi_gparity_AMA.C
 fit_pipi_gparity_SOURCES = fit_pipi_gparity.C
 fit_ktopipi_gparity_SOURCES = fit_ktopipi_gparity.C
+fit_simple_SOURCES = fit_simple.C
 benchmark_SOURCES = benchmark.C
 test_hdf5_SOURCES = test_hdf5.C
 test_expression_parse_SOURCES = test_expression_parse.C
