Python scripts from src directory now also installed

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -3,3 +3,8 @@ lib_LIBRARIES = libcpsfit.a
 libcpsfit_a_SOURCES = 
 
 AM_CPPFLAGS = -I$(srcdir)/../include
+
+testdir = $(prefix)/src
+test_DATA = pyplot.py
+
+pyplot.py:
