Added comparison of ktopipi data with asymmetric and symmetric momentum assignments Comparison plot output defaults to logarithmic y axis

--- a/main/Makefile.am
+++ b/main/Makefile.am
@@ -1,4 +1,4 @@
-bin_PROGRAMS = fit_example test_ET test_hdf5 test_tensor test_expression_parse simfit_example superjack_example generic_freeze_example fit_mpi_gparity_AMA fit_pipi_gparity fit_ktopipi_gparity fit_simple benchmark hdf5_print hdf5_calc analyze_ktopipi_gparity fit_pipi_ktopipi_sim_gparity fit_pipi_gparity_ratio dist_compare compare_simple_correlators compare_asymm_symm_pipi
+bin_PROGRAMS = fit_example test_ET test_hdf5 test_tensor test_expression_parse simfit_example superjack_example generic_freeze_example fit_mpi_gparity_AMA fit_pipi_gparity fit_ktopipi_gparity fit_simple benchmark hdf5_print hdf5_calc analyze_ktopipi_gparity fit_pipi_ktopipi_sim_gparity fit_pipi_gparity_ratio dist_compare compare_simple_correlators compare_asymm_symm_pipi compare_asymm_symm_ktopipi
 fit_example_SOURCES = fit_example.C
 test_ET_SOURCES = test_ET.C
 test_tensor_SOURCES = test_tensor.C
@@ -20,6 +20,7 @@ fit_pipi_ktopipi_sim_gparity_SOURCES = fit_pipi_ktopipi_sim_gparity.C
 fit_pipi_gparity_ratio_SOURCES = fit_pipi_gparity_ratio.C
 compare_simple_correlators_SOURCES = compare_simple_correlators.C
 compare_asymm_symm_pipi_SOURCES = compare_asymm_symm_pipi.C
+compare_asymm_symm_ktopipi_SOURCES = compare_asymm_symm_ktopipi.C
 
 AM_CPPFLAGS = -I$(srcdir)/../include -I$(srcdir)/include
 LDADD =../src/libcpsfit.a
