--- a/main/Makefile.am
+++ b/main/Makefile.am
@@ -1,4 +1,4 @@
-bin_PROGRAMS = fit_example test_ET test_hdf5 test_tensor test_expression_parse simfit_example superjack_example generic_freeze_example fit_mpi_gparity_AMA fit_pipi_gparity fit_ktopipi_gparity fit_simple benchmark hdf5_print hdf5_calc analyze_ktopipi_gparity fit_pipi_ktopipi_sim_gparity fit_pipi_gparity_ratio dist_compare compare_simple_correlators compare_asymm_symm_pipi compare_asymm_symm_ktopipi fit_simple_sampleAMA fit_pipi_gparity_sampleAMA fit_ktopipi_gparity_sampleAMA fit_resampled_results fit_simple_AMA
+bin_PROGRAMS = fit_example test_ET test_hdf5 test_tensor test_expression_parse simfit_example superjack_example generic_freeze_example fit_mpi_gparity_AMA fit_pipi_gparity fit_ktopipi_gparity fit_simple benchmark hdf5_print hdf5_calc analyze_ktopipi_gparity fit_pipi_ktopipi_sim_gparity fit_pipi_gparity_ratio dist_compare compare_simple_correlators compare_asymm_symm_pipi compare_asymm_symm_ktopipi fit_simple_sampleAMA fit_pipi_gparity_sampleAMA fit_ktopipi_gparity_sampleAMA fit_resampled_results fit_simple_AMA fit_bk_gparity_AMA
 fit_example_SOURCES = fit_example.C
 test_ET_SOURCES = test_ET.C
 test_tensor_SOURCES = test_tensor.C
@@ -26,6 +26,7 @@ fit_pipi_gparity_sampleAMA_SOURCES = fit_pipi_gparity_sampleAMA.C
 fit_ktopipi_gparity_sampleAMA_SOURCES = fit_ktopipi_gparity_sampleAMA.C
 fit_resampled_results_SOURCES = fit_resampled_results.C
 fit_simple_AMA_SOURCES = fit_simple_AMA.C
+fit_bk_gparity_AMA_SOURCES = fit_bk_gparity_AMA.C
 
 AM_CPPFLAGS = -I$(srcdir)/../include -I$(srcdir)/include
 LDADD =../src/libcpsfit.a
