Added macro constructs for generating all the boilerplate for iterable structs

--- a/example/Makefile.am
+++ b/example/Makefile.am
@@ -1,6 +1,7 @@
 exampledir = $(prefix)/example
 testdir = $(prefix)/test
-example_PROGRAMS = fit_example generic_freeze_example simfit_example superjack_example
+example_PROGRAMS = enumerated_struct_example fit_example generic_freeze_example simfit_example superjack_example
+enumerated_struct_example_SOURCES = enumerated_struct_example.C
 fit_example_SOURCES = fit_example.C
 generic_freeze_example_SOURCES = generic_freeze_example.C
 simfit_example_SOURCES = simfit_example.C
