--- a/main/Makefile.am
+++ b/main/Makefile.am
@@ -1,10 +1,11 @@
 exampledir = $(prefix)/example
 testdir = $(prefix)/test
-bin_PROGRAMS = analyze_ktopipi_gparity compare_asymm_symm_ktopipi compare_asymm_symm_pipi compare_simple_correlators dist_compare fit_bk_gparity_AMA fit_ktopipi_gparity fit_ktopipi_gparity_sampleAMA fit_mpi_gparity_AMA fit_pipi_gparity fit_pipi_gparity_ratio fit_pipi_gparity_sampleAMA fit_pipi_ktopipi_sim_gparity fit_resampled_results fit_simple_AMA fit_simple fit_simple_sampleAMA hdf5_calc hdf5_print plot_pipi_phaseshift
+bin_PROGRAMS = analyze_ktopipi_gparity compare_asymm_symm_ktopipi compare_asymm_symm_pipi compare_simple_correlators compute_pipi_phaseshift dist_compare fit_bk_gparity_AMA fit_ktopipi_gparity fit_ktopipi_gparity_sampleAMA fit_mpi_gparity_AMA fit_pipi_gparity fit_pipi_gparity_ratio fit_pipi_gparity_sampleAMA fit_pipi_ktopipi_sim_gparity fit_resampled_results fit_simple_AMA fit_simple fit_simple_sampleAMA hdf5_calc hdf5_print plot_pipi_phaseshift
 analyze_ktopipi_gparity_SOURCES = analyze_ktopipi_gparity.C
 compare_asymm_symm_ktopipi_SOURCES = compare_asymm_symm_ktopipi.C
 compare_asymm_symm_pipi_SOURCES = compare_asymm_symm_pipi.C
 compare_simple_correlators_SOURCES = compare_simple_correlators.C
+compute_pipi_phaseshift_SOURCES = compute_pipi_phaseshift.C
 dist_compare_SOURCES = dist_compare.C
 fit_bk_gparity_AMA_SOURCES = fit_bk_gparity_AMA.C
 fit_ktopipi_gparity_SOURCES = fit_ktopipi_gparity.C
