--- a/main/Makefile.am
+++ b/main/Makefile.am
@@ -1,6 +1,6 @@
 exampledir = $(prefix)/example
 testdir = $(prefix)/test
-bin_PROGRAMS = analyze_ktopipi_gparity compare_asymm_symm_ktopipi compare_asymm_symm_pipi compare_simple_correlators compute_pipi_phaseshift dist_compare fit_bk_gparity_AMA fit_ktopipi_gparity fit_ktopipi_gparity_sampleAMA fit_mpi_gparity_AMA fit_pipi_gparity fit_pipi_gparity_ratio fit_pipi_gparity_sampleAMA fit_pipi_ktopipi_sim_gparity fit_resampled_results fit_sigmasigma_gparity fit_simple_AMA fit_simple fit_simple_sampleAMA global_fit hdf5_calc hdf5_print plot_pipi_phaseshift
+bin_PROGRAMS = analyze_ktopipi_gparity compare_asymm_symm_ktopipi compare_asymm_symm_pipi compare_simple_correlators compute_pipi_phaseshift dist_compare fit_bk_gparity_AMA fit_ktopipi_gparity fit_ktopipi_gparity_sampleAMA fit_mpi_gparity_AMA fit_pipi_gparity fit_pipi_gparity_ratio fit_pipi_gparity_sampleAMA fit_pipi_ktopipi_sim_gparity fit_pipitosigma_gparity fit_resampled_results fit_sigmasigma_gparity fit_simple_AMA fit_simple fit_simple_sampleAMA global_fit hdf5_calc hdf5_print plot_pipi_phaseshift
 analyze_ktopipi_gparity_SOURCES = analyze_ktopipi_gparity.C
 compare_asymm_symm_ktopipi_SOURCES = compare_asymm_symm_ktopipi.C
 compare_asymm_symm_pipi_SOURCES = compare_asymm_symm_pipi.C
@@ -15,6 +15,7 @@ fit_pipi_gparity_SOURCES = fit_pipi_gparity.C
 fit_pipi_gparity_ratio_SOURCES = fit_pipi_gparity_ratio.C
 fit_pipi_gparity_sampleAMA_SOURCES = fit_pipi_gparity_sampleAMA.C
 fit_pipi_ktopipi_sim_gparity_SOURCES = fit_pipi_ktopipi_sim_gparity.C
+fit_pipitosigma_gparity_SOURCES = fit_pipitosigma_gparity.C
 fit_resampled_results_SOURCES = fit_resampled_results.C
 fit_sigmasigma_gparity_SOURCES = fit_sigmasigma_gparity.C
 fit_simple_AMA_SOURCES = fit_simple_AMA.C
