Added further generalizations of superjackknife resampling Renamed some functions in pipi/K->pipi common code to better reflect their purpose Generalized pipi->sigma, sigma 2pt, sigma bubble, and pipi bubble data read to allow complete policy class control over filename Moved sigma bubble container to pipi_common and generalized to allow for different distribution types Added K->sigma parse/combine functionality and added a main program to perform fit

--- a/main/Makefile.am
+++ b/main/Makefile.am
@@ -1,6 +1,6 @@
 exampledir = $(prefix)/example
 testdir = $(prefix)/test
-bin_PROGRAMS = analyze_ktopipi_gparity analyze_ktopipi_mixdiags_sampleAMA compare_asymm_symm_ktopipi compare_asymm_symm_pipi compare_simple_correlators compute_pipi_phaseshift dist_compare fit_bk_gparity_AMA fit_ktopipi_gparity fit_ktopipi_gparity_sampleAMA fit_ktopipi_gparity_sampleAMA_sum fit_mpi_gparity_AMA fit_pipi_gparity fit_pipi_gparity_ratio fit_pipi_gparity_sampleAMA fit_pipi_ktopipi_sim_gparity fit_pipi_sigma_sim_gparity fit_pipitosigma_gparity fit_resampled_results fit_sigmasigma_gparity fit_simple_AMA fit_simple fit_simple_sampleAMA fit_simultaneous global_fit hdf5_calc hdf5_print plot_pipi_phaseshift
+bin_PROGRAMS = analyze_ktopipi_gparity analyze_ktopipi_mixdiags_sampleAMA compare_asymm_symm_ktopipi compare_asymm_symm_pipi compare_simple_correlators compute_pipi_phaseshift dist_compare fit_bk_gparity_AMA fit_ktopipi_gparity fit_ktopipi_gparity_sampleAMA fit_ktopipi_gparity_sampleAMA_sum fit_ktosigma_gparity fit_mpi_gparity_AMA fit_pipi_gparity fit_pipi_gparity_ratio fit_pipi_gparity_sampleAMA fit_pipi_ktopipi_sim_gparity fit_pipi_sigma_sim_gparity fit_pipitosigma_gparity fit_resampled_results fit_sigmasigma_gparity fit_simple_AMA fit_simple fit_simple_sampleAMA fit_simultaneous global_fit hdf5_calc hdf5_print plot_pipi_phaseshift
 analyze_ktopipi_gparity_SOURCES = analyze_ktopipi_gparity.C
 analyze_ktopipi_mixdiags_sampleAMA_SOURCES = analyze_ktopipi_mixdiags_sampleAMA.C
 compare_asymm_symm_ktopipi_SOURCES = compare_asymm_symm_ktopipi.C
@@ -12,6 +12,7 @@ fit_bk_gparity_AMA_SOURCES = fit_bk_gparity_AMA.C
 fit_ktopipi_gparity_SOURCES = fit_ktopipi_gparity.C
 fit_ktopipi_gparity_sampleAMA_SOURCES = fit_ktopipi_gparity_sampleAMA.C
 fit_ktopipi_gparity_sampleAMA_sum_SOURCES = fit_ktopipi_gparity_sampleAMA_sum.C
+fit_ktosigma_gparity_SOURCES = fit_ktosigma_gparity.C
 fit_mpi_gparity_AMA_SOURCES = fit_mpi_gparity_AMA.C
 fit_pipi_gparity_SOURCES = fit_pipi_gparity.C
 fit_pipi_gparity_ratio_SOURCES = fit_pipi_gparity_ratio.C
