--- a/main/Makefile.am
+++ b/main/Makefile.am
@@ -1,6 +1,6 @@
 exampledir = $(prefix)/example
 testdir = $(prefix)/test
-bin_PROGRAMS = analyze_ktopipi_gparity analyze_ktopipi_mixdiags_sampleAMA compare_asymm_symm_ktopipi compare_asymm_symm_pipi compare_simple_correlators compute_pipi_phaseshift dist_compare fit_bk_gparity_AMA fit_ktopipi_gparity fit_ktopipi_gparity_sampleAMA fit_ktopipi_gparity_sampleAMA_sum fit_ktopipi_ktosigma_combined_gparity fit_ktosigma_gparity fit_mpi_gparity_AMA fit_pipi_gnd_exc_sigma_sim_gparity fit_pipi_gnd_exc_sim_gparity fit_pipi_gparity fit_pipi_gparity_ratio fit_pipi_gparity_sampleAMA fit_pipi_ktopipi_sim_gparity fit_pipi_sigma_sim_gparity fit_pipi_sigma_sim_gparity_sampleAMA fit_pipitosigma_gparity fit_resampled_results fit_sigmasigma_gparity fit_simple_AMA fit_simple fit_simple_sampleAMA fit_simultaneous global_fit hdf5_calc hdf5_combine hdf5_print plot_pipi_phaseshift
+bin_PROGRAMS = analyze_ktopipi_gparity analyze_ktopipi_mixdiags_sampleAMA compare_asymm_symm_ktopipi compare_asymm_symm_pipi compare_simple_correlators compute_pipi_phaseshift dist_compare fit_bk_gparity_AMA fit_ktopipi_gnd_exc_ktosigma_combined_gparity fit_ktopipi_gparity fit_ktopipi_gparity_sampleAMA fit_ktopipi_gparity_sampleAMA_sum fit_ktopipi_ktosigma_combined_gparity fit_ktosigma_gparity fit_mpi_gparity_AMA fit_pipi_gnd_exc_sigma_sim_gparity fit_pipi_gnd_exc_sim_gparity fit_pipi_gparity fit_pipi_gparity_ratio fit_pipi_gparity_sampleAMA fit_pipi_ktopipi_sim_gparity fit_pipi_sigma_sim_gparity fit_pipi_sigma_sim_gparity_sampleAMA fit_pipitosigma_gparity fit_resampled_results fit_sigmasigma_gparity fit_simple_AMA fit_simple fit_simple_sampleAMA fit_simultaneous global_fit hdf5_calc hdf5_combine hdf5_print plot_pipi_phaseshift
 analyze_ktopipi_gparity_SOURCES = analyze_ktopipi_gparity.C
 analyze_ktopipi_mixdiags_sampleAMA_SOURCES = analyze_ktopipi_mixdiags_sampleAMA.C
 compare_asymm_symm_ktopipi_SOURCES = compare_asymm_symm_ktopipi.C
@@ -9,6 +9,7 @@ compare_simple_correlators_SOURCES = compare_simple_correlators.C
 compute_pipi_phaseshift_SOURCES = compute_pipi_phaseshift.C
 dist_compare_SOURCES = dist_compare.C
 fit_bk_gparity_AMA_SOURCES = fit_bk_gparity_AMA.C
+fit_ktopipi_gnd_exc_ktosigma_combined_gparity_SOURCES = fit_ktopipi_gnd_exc_ktosigma_combined_gparity.C
 fit_ktopipi_gparity_SOURCES = fit_ktopipi_gparity.C
 fit_ktopipi_gparity_sampleAMA_SOURCES = fit_ktopipi_gparity_sampleAMA.C
 fit_ktopipi_gparity_sampleAMA_sum_SOURCES = fit_ktopipi_gparity_sampleAMA_sum.C
