--- a/main/Makefile.am
+++ b/main/Makefile.am
@@ -1,6 +1,6 @@
 exampledir = $(prefix)/example
 testdir = $(prefix)/test
-bin_PROGRAMS = analyze_ktopipi_gparity analyze_ktopipi_mixdiags_sampleAMA compare_asymm_symm_ktopipi compare_asymm_symm_pipi compare_simple_correlators compute_pipi_phaseshift dist_compare fit_bk_gparity_AMA fit_ktopipi_gnd_exc_ktosigma_combined_gparity fit_ktopipi_gparity fit_ktopipi_gparity_sampleAMA fit_ktopipi_gparity_sampleAMA_sum fit_ktopipi_ktosigma_combined_gparity fit_ktosigma_gparity fit_mpi_gparity_AMA fit_pipi_gnd_exc_sigma_sim_gparity fit_pipi_gnd_exc_sim_gparity fit_pipi_gparity fit_pipi_gparity_ratio fit_pipi_gparity_sampleAMA fit_pipi_ktopipi_sim_gparity fit_pipi_multiop_comoving_GEVP_gparity fit_pipi_multiop_comoving_gparity fit_pipi_sigma_GEVP_gparity fit_pipi_sigma_sim_gparity fit_pipi_sigma_sim_gparity_sampleAMA fit_pipitosigma_gparity fit_resampled_results fit_sigmasigma_gparity fit_simple_AMA fit_simple fit_simple_sampleAMA fit_simultaneous global_fit hdf5_calc hdf5_combine hdf5_print plot_pipi_phaseshift pvalue
+bin_PROGRAMS = analyze_ktopipi_gparity analyze_ktopipi_mixdiags_sampleAMA compare_asymm_symm_ktopipi compare_asymm_symm_pipi compare_simple_correlators compute_pipi_phaseshift dist_compare fit_bk_gparity_AMA fit_ktopipi_gnd_exc_ktosigma_combined_gparity fit_ktopipi_gparity fit_ktopipi_gparity_sampleAMA fit_ktopipi_gparity_sampleAMA_sum fit_ktopipi_ktosigma_combined_gparity fit_ktosigma_gparity fit_mpi_gparity_AMA fit_pipi_gnd_exc_sigma_sim_gparity fit_pipi_gnd_exc_sim_gparity fit_pipi_gparity fit_pipi_gparity_ratio fit_pipi_gparity_sampleAMA fit_pipi_ktopipi_sim_gparity fit_pipi_multiop_comoving_GEVP_gparity fit_pipi_multiop_comoving_gparity fit_pipi_sigma_GEVP_gparity fit_pipi_sigma_sim_gparity fit_pipi_sigma_sim_gparity_sampleAMA fit_pipitosigma_gparity fit_resampled_results fit_sigmasigma_gparity fit_simple_AMA fit_simple fit_simple_sampleAMA fit_simultaneous gaussian_jackknife global_fit hdf5_calc hdf5_combine hdf5_print plot_pipi_phaseshift plot_pipi_phaseshift_sdep pvalue
 analyze_ktopipi_gparity_SOURCES = analyze_ktopipi_gparity.C
 analyze_ktopipi_mixdiags_sampleAMA_SOURCES = analyze_ktopipi_mixdiags_sampleAMA.C
 compare_asymm_symm_ktopipi_SOURCES = compare_asymm_symm_ktopipi.C
@@ -34,11 +34,13 @@ fit_simple_AMA_SOURCES = fit_simple_AMA.C
 fit_simple_SOURCES = fit_simple.C
 fit_simple_sampleAMA_SOURCES = fit_simple_sampleAMA.C
 fit_simultaneous_SOURCES = fit_simultaneous.C
+gaussian_jackknife_SOURCES = gaussian_jackknife.C
 global_fit_SOURCES = global_fit.C
 hdf5_calc_SOURCES = hdf5_calc.C
 hdf5_combine_SOURCES = hdf5_combine.C
 hdf5_print_SOURCES = hdf5_print.C
 plot_pipi_phaseshift_SOURCES = plot_pipi_phaseshift.C
+plot_pipi_phaseshift_sdep_SOURCES = plot_pipi_phaseshift_sdep.C
 pvalue_SOURCES = pvalue.C
 AM_CPPFLAGS = -I$(srcdir)/../include -I$(srcdir)/include
 LDADD =../src/libcpsfit.a
