Added wrapper around Minuit2 minimizer (requires compiling with --with-minuit2)

--- a/config.h.in
+++ b/config.h.in
@@ -21,6 +21,9 @@
 /* Define to 1 if you have the <memory.h> header file. */
 #undef HAVE_MEMORY_H
 
+/* Use Minuit2 */
+#undef HAVE_MINUIT2
+
 /* Define to 1 if you have the `pow' function. */
 #undef HAVE_POW
 
