Added a boot-jackknife class that contains jackknife distributions generated under a bootstrap resampling

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -1,8 +1,9 @@
 exampledir = $(prefix)/example
 testdir = $(prefix)/test
-test_PROGRAMS = benchmark test_block_doublejackknife test_boundedfit test_ET test_expression_parse test_gsl_min test_gsl_multidim_min test_hdf5 test_Luscher_zeta test_minuit2_min test_parsers test_simple_fit_wrapper test_tensor
+test_PROGRAMS = benchmark test_block_doublejackknife test_boot_jackknife test_boundedfit test_ET test_expression_parse test_gsl_min test_gsl_multidim_min test_hdf5 test_Luscher_zeta test_minuit2_min test_parsers test_simple_fit_wrapper test_tensor
 benchmark_SOURCES = benchmark.C
 test_block_doublejackknife_SOURCES = test_block_doublejackknife.C
+test_boot_jackknife_SOURCES = test_boot_jackknife.C
 test_boundedfit_SOURCES = test_boundedfit.C
 test_ET_SOURCES = test_ET.C
 test_expression_parse_SOURCES = test_expression_parse.C
